--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -581,7 +581,7 @@ p {
     position: absolute;
     left: 50%;
     top: 50%;
-    background-image: url(../img/status.gif);
+    background-image: url(https://kaaninan.net/assets/img/status.gif);
     background-repeat: no-repeat;
     background-position: center;
     margin: -100px 0 0 -100px;
